[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/dg6.png" type="Texture" id=1]
[ext_resource path="res://GoogleSans-Regular-v1.27.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/arrowLeft.png" type="Texture" id=3]
[ext_resource path="res://Sprites/arrowRight.png" type="Texture" id=4]
[ext_resource path="res://Play.gd" type="Script" id=5]
[ext_resource path="res://Sprites/dg1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/dg2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/dg4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/dg3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/dg5.png" type="Texture" id=10]
[ext_resource path="res://Sprites/ft5.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=5]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.0235294 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.52549, 0.627451, 0.635294, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -435, -246.76 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 600
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer"]
margin_right = 600.0
margin_bottom = 600.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Instructions[/center]

O Use the directional keys to control your ship
O Use Ctrl or LMB to shoot 
O Shoot  or dodge meteors
O Shoot enemy ships
O You earn points by shooting meteors or enemy ships
O A level is captured by having at least 1000 points at a go
O Survive as long as you can

[center]Goodluck![/center]
"
text = "Instructions

O Use the directional keys to control your ship
O Use Ctrl or LMB to shoot 
O Shoot  or dodge meteors
O Shoot enemy ships
O You earn points by shooting meteors or enemy ships
O A level is captured by having at least 1000 points at a go
O Survive as long as you can

Goodluck!
"
scroll_following = true

[node name="Panel" type="Panel" parent="HSplitContainer"]
margin_left = 600.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="Control" parent="HSplitContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -300.0
margin_right = 212.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -180.0
margin_right = 175.5
margin_bottom = 180.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -116.0
margin_right = 111.0
margin_bottom = 112.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -148.5
margin_right = 153.5
margin_bottom = 148.5
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -149.5
margin_right = 150.5
margin_bottom = 149.5
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -97.0
margin_right = 97.5
margin_bottom = 97.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -92.5
margin_right = 96.5
margin_bottom = 92.5
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="HSplitContainer/Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -60.5
margin_right = 125.0
margin_bottom = 60.5
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="Button" parent="HSplitContainer/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -71.0
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Panel" parent="HSplitContainer/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right Button" type="TextureButton" parent="HSplitContainer/Panel/Tabs"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_bottom = 25.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Button" type="TextureButton" parent="HSplitContainer/Panel/Tabs"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
texture_normal = ExtResource( 3 )

[node name="Head" type="Label" parent="HSplitContainer/Panel"]
anchor_right = 1.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "Choose a Space Section To Conquer"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="HSplitContainer/Panel/Mode" to="." method="_on_Mode_button_down"]
[connection signal="button_down" from="HSplitContainer/Panel/Tabs/Right Button" to="." method="_on_Right_Button_down"]
[connection signal="button_down" from="HSplitContainer/Panel/Tabs/Left Button" to="." method="_on_Left_Button_down"]
